--- a/conf/mod-chromiecraft-smartstone.dist
+++ b/conf/mod-chromiecraft-smartstone.dist
@@ -5,7 +5,7 @@
 [worldserver]
 
 ########################################
-# My module configuration
+# ModChromiecraftSmartstone configuration
 ########################################
 #
 #    ModChromiecraftSmartstone.Enable
