feat: add combat and pvp conf

--- a/conf/mod-chromiecraft-smartstone.conf.dist
+++ b/conf/mod-chromiecraft-smartstone.conf.dist
@@ -49,3 +49,21 @@ ModChromiecraftSmartstone.CanUseInArena = 0
 #
 
 ModChromiecraftSmartstone.CanUseInBG = 0
+
+#
+#    ModChromiecraftSmartstone.CanUseInCombat
+#        Description: Sets whether the SmartStone can be used in combat.
+#        Default:     0 - Disabled
+#                     1 - Enabled
+#
+
+ModChromiecraftSmartstone.CanUseInCombat = 0
+
+#
+#    ModChromiecraftSmartstone.CanUseInPvP
+#        Description: Sets whether the SmartStone can be used in PvP.
+#        Default:     0 - Disabled
+#                     1 - Enabled
+#
+
+ModChromiecraftSmartstone.CanUseInPvP = 0
