Add debug mode option to Smartstone module
Introduces a new configuration option 'ModChromiecraftSmartstone.Debug' to enable all Smartstone features for debugging purposes. Updates logic to allow debug mode to bypass restrictions similarly to GameMaster status, and adds corresponding member and accessor methods.

--- a/conf/mod-chromiecraft-smartstone.conf.dist
+++ b/conf/mod-chromiecraft-smartstone.conf.dist
@@ -67,3 +67,12 @@ ModChromiecraftSmartstone.CanUseInCombat = 0
 #
 
 ModChromiecraftSmartstone.CanUseInPvP = 0
+
+# 
+#    ModChromiecraftSmartstone.Debug
+#        Description: Enables all Smartstone features by default.
+#        Default:     0 - Disabled
+#                     1 - Enabled
+#
+
+ModChromiecraftSmartstone.Debug = 0
